--- a/swiftDemo/Base.lproj/Main.storyboard
+++ b/swiftDemo/Base.lproj/Main.storyboard
@@ -398,7 +398,7 @@
                                     <constraint firstAttribute="height" constant="50" id="K9f-fn-jkJ"/>
                                 </constraints>
                             </view>
-                            <view alpha="0.5" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mSL-Aw-4tC">
+                            <view hidden="YES" alpha="0.5" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mSL-Aw-4tC">
                                 <rect key="frame" x="0.0" y="124" width="414" height="100"/>
                                 <color key="backgroundColor" red="0.70463096079999998" green="1" blue="0.63199354190000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
